--- a/jumia-ui/src/index.css
+++ b/jumia-ui/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root > div > div > header{
+  padding-left: 15px;
+}
